Added Travis configuration (fixed3)

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -7,8 +7,8 @@ hass_timezone: Europe/Berlin
 
 # http
 http_password: 00000000000000000000
-ssl_certificate: 00000000000000000000
-ssl_key: 00000000000000000000
+ssl_certificate: /fullchain.pem
+ssl_key: /privkey.pem
 base_url: 00000000000000000000
 trusted_ip: 127.0.0.1
 trusted_ip_2: 127.0.0.1
