--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -7,8 +7,8 @@ hass_timezone: Europe/Berlin
 
 # http
 http_password: 00000000000000000000
-ssl_certificate: /fullchain.pem
-ssl_key: /privkey.pem
+ssl_certificate: misc/travis_fullchain.dummy
+ssl_key: misc/travis_key.dummy
 base_url: 00000000000000000000
 trusted_ip: 127.0.0.1
 trusted_ip_2: 127.0.0.1
