--- a/automation/noone_home.yaml
+++ b/automation/noone_home.yaml
@@ -1,17 +1,19 @@
 - alias: "Nobody at Home"
   id: nobody_home
   trigger:
-    platform: state
-    entity_id: device_tracker.404e36855fdd
-    from: 'home'
-    to: 'not_home'
-    for:
-      hours: 0
-      minutes: 30
-      seconds: 0
+    - platform: time
+      minutes: '\5'
+      seconds: 00
+  condition:
+    - condition: state
+      entity_id: device_tracker.404e36855fdd
+      state: 'not_home'
+      for:
+        hours: 0
+        minutes: 30
+        seconds: 0
   action:
     - service: light.turn_off
       data:
         entity_id:
           - group.all_lights
-          - switch.bathroom_heater
