--- a/configuration.yaml
+++ b/configuration.yaml
@@ -295,6 +295,7 @@ weather: !include_dir_list weather/
 
 light: !include_dir_merge_list light/
 automation: !include_dir_merge_list automation/
+scene: !include_dir_merge_list scenes/
 
 input_number: !include_dir_merge_named input_number/
 input_boolean: !include_dir_merge_named input_boolean/
