--- a/scenes/bedroom.yaml
+++ b/scenes/bedroom.yaml
@@ -46,3 +46,34 @@
     light.tv_light: off
     light.tv_lights: off
     switch.ikea_planter: on
+
+- name: Night Toilet
+  entities:
+    light.bedroom_nightstand:
+      state: on
+      brightness: 50
+      kelvin: 2200
+    light.bathroom:
+      state: on
+      brightness: 50
+      kelvin: 2200
+    light.living_room_under_couch:
+      state: on
+      brightness: 128
+      kelvin: 1500
+    light.kitchen_1:
+      state: on
+      brightness: 128
+      kelvin: 2200
+    switch.ikea_planter: off
+    light.bedroom_4: off
+    light.bedroom_2: off
+    light.living_room_ceiling_lamp: off
+    light.living_room_couch: off
+    light.living_room_normal_lights: off
+    light.livingroom_plant: off
+    light.computer_lamp: off
+    light.office: off
+    light.office_ceiling: off
+    light.tv_light: off
+    light.tv_lights: off
