--- a/customize.yaml
+++ b/customize.yaml
@@ -1,47 +1,50 @@
-binary_sensor.floorplan:
-  custom_ui_state_card: floorplan
-  config:
-    name: Demo Floorplan
-    image: /local/custom_ui/floorplan/floorplan.svg
-    stylesheet: /local/custom_ui/floorplan/floorplan.css
-    warnings:
-    date_format: DD-MM-YYYY
-    last_motion_entity: sensor.template_last_motion
-    last_motion_class: last-motion
-    groups:
-    - name: Sensors
-      entities:
-      - sensor.netatmo_bathroom_temperature
-      - sensor.netatmo_bedroom_temperature
-      - sensor.netatmo_outdoormodule_temperature
-      text_template: '${entity.state ? ""+Math.round(entity.state*100)/100+"° C" :
-        "undefined"}'
-      class_template: ' var temp = parseFloat(entity.state.replace("°", "")); if (temp
-        < 10) return "temp-low"; else if (temp < 30) return "temp-medium"; else return
-        "temp-high"; '
-    - name: Lights
-      entities:
-      - light.kitchen_1
-      - light.kitchen_2
-      - light.living_room_1
-      - light.bedroom_2
-      states:
-      - state: 'on'
-        class: light-on
-      - state: 'off'
-        class: light-off
-      action:
-        domain: homeassistant
-        service: toggle
-    - name: Switches
-      entities:
-      - switch.bathroom_heater
-      - switch.bedroom_fan
-      states:
-      - state: 'on'
-        class: doorbell-on
-      - state: 'off'
-        class: doorbell-off
+binary_sensor.tv_remote:
+  custom_ui_state_card: state-card-remote
+  config: !include remote.yaml
+# binary_sensor.floorplan:
+#   custom_ui_state_card: floorplan
+#   config:
+#     name: Demo Floorplan
+#     image: /local/custom_ui/floorplan/floorplan.svg
+#     stylesheet: /local/custom_ui/floorplan/floorplan.css
+#     warnings:
+#     date_format: DD-MM-YYYY
+#     last_motion_entity: sensor.template_last_motion
+#     last_motion_class: last-motion
+#     groups:
+#     - name: Sensors
+#       entities:
+#       - sensor.netatmo_bathroom_temperature
+#       - sensor.netatmo_bedroom_temperature
+#       - sensor.netatmo_outdoormodule_temperature
+#       text_template: '${entity.state ? ""+Math.round(entity.state*100)/100+"° C" :
+#         "undefined"}'
+#       class_template: ' var temp = parseFloat(entity.state.replace("°", "")); if (temp
+#         < 10) return "temp-low"; else if (temp < 30) return "temp-medium"; else return
+#         "temp-high"; '
+#     - name: Lights
+#       entities:
+#       - light.kitchen_1
+#       - light.kitchen_2
+#       - light.living_room_1
+#       - light.bedroom_2
+#       states:
+#       - state: 'on'
+#         class: light-on
+#       - state: 'off'
+#         class: light-off
+#       action:
+#         domain: homeassistant
+#         service: toggle
+#     - name: Switches
+#       entities:
+#       - switch.bathroom_heater
+#       - switch.bedroom_fan
+#       states:
+#       - state: 'on'
+#         class: doorbell-on
+#       - state: 'off'
+#         class: doorbell-off
 light.bedroom_2:
   friendly_name: Bedroom Ceiling
   icon: mdi:ceiling-light
