--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -50,6 +50,12 @@ hardware:
     - group.netatmostatus
     - group.tradfri
 
+remote:
+  view: yes
+  name: Remote
+  entities:
+    - binary_sensor.remote
+
 # entertainment:
 #   view: yes
 #   name: Entertainment
