--- a/device_tracker/unifi.yaml
+++ b/device_tracker/unifi.yaml
@@ -2,6 +2,6 @@ platform: unifi
 username: !secret unifi_username
 password: !secret unifi_password
 host: !secret unifi_host
-#site_id:
-verify_ssl: False
-detection_time: 5
+# site_id:
+verify_ssl: false
+detection_time: 30
