--- a/alerts/door_entrance.yaml
+++ b/alerts/door_entrance.yaml
@@ -4,7 +4,7 @@ door_entrance:
   entity_id: binary_sensor.entrance__entrance_tag_open
   state: 'on'
   repeat: 30
-  can_acknowledge: True
-  skip_first: True
+  can_acknowledge: true
+  skip_first: true
   notifiers:
     - steff_phone
