Simplified presence detection
Migrated all automations to using presence group instead of single entitiy

--- a/automation/away_mode.yaml
+++ b/automation/away_mode.yaml
@@ -2,7 +2,7 @@
   id: away_mode
   trigger:
     - platform: state
-      entity_id: device_tracker.404e36855fdd
+      entity_id: group.presence
       from: 'home'
       to: 'not_home'
       for:
