--- a/automation/coming_home/home_after_sunset.yaml
+++ b/automation/coming_home/home_after_sunset.yaml
@@ -2,7 +2,7 @@
   id: coming_home_after_sunset
   trigger:
     platform: state
-    entity_id: device_tracker.404e36855fdd
+    entity_id: group.presence
     from: 'not_home'
     to: 'home'
     for:
