--- a/automation/coming_home/bedroom_fan_off.yaml
+++ b/automation/coming_home/bedroom_fan_off.yaml
@@ -2,7 +2,7 @@
   id: coming_home_bedroom_fan_off
   trigger:
     platform: state
-    entity_id: device_tracker.404e36855fdd
+    entity_id: group.presence
     from: 'not_home'
     to: 'home'
     for:
