--- a/sensors/apartment_temperature.yaml
+++ b/sensors/apartment_temperature.yaml
@@ -3,4 +3,28 @@ sensors:
   apartment_temperature:
     friendly_name: "Apartment Temperature"
     unit_of_measurement: "°C"
-    value_template: "{{ ((((states.climate.bathroom.attributes.current_temperature * 1.5)+(states.climate.kitchenthermometer.attributes.current_temperature * 0.5)+(states.climate.thermostat.attributes.current_temperature * 2)+(states.sensor.livingroom_temperature_couch.state | float * 0.1)+(states.sensor.netatmo_office_temperature.state | float * 0.25)+(states.sensor.netatmo_bedroom_temperature.state | float * 2)) / 6.35) | float) | round(1) }}"
+    value_template: >-
+      {% if states.climate.bathroomthermostat
+        and states.climate.kitchenthermometer
+          and states.climate.thermostat
+            and states.sensor.livingroom_temperature_couch
+              and states.sensor.netatmo_office_temperature
+                and states.sensor.netatmo_bedroom_temperature
+      %}
+        {{
+          (
+            (
+              (
+                (states.climate.bathroomthermostat.attributes.current_temperature | float * 1.5)
+                +(states.climate.kitchenthermometer.attributes.current_temperature | float * 0.5)
+                +(states.climate.thermostat.attributes.current_temperature | float * 2)
+                +(states.sensor.livingroom_temperature_couch.state | float * 0.1)
+                +(states.sensor.netatmo_office_temperature.state | float * 0.25)
+                +(states.sensor.netatmo_bedroom_temperature.state | float * 2)
+              ) / 6.35
+            ) | float
+          ) | round(1)
+        }}
+      {% else %}
+        false
+      {% endif %}
