--- a/automation/bedroom/overslept.yaml
+++ b/automation/bedroom/overslept.yaml
@@ -5,8 +5,8 @@
       at: "07:45:00"
   condition:
     - condition: state
-      entity_id: group.presence
-      state: 'home'
+      entity_id: binary_sensor.is_sleeping
+      state: 'on'
     - condition: state
       entity_id: input_boolean.holidays
       state: 'off'
@@ -17,13 +17,6 @@
         - wed
         - thu
         - fri
-    - condition: state
-      entity_id: binary_sensor.bedroomdoor_state
-      state: 'off'
-      for:
-        hours: 1
-        minutes: 0
-        seconds: 0
   action:
     - service: light.turn_on
       entity_id:
@@ -39,36 +32,16 @@
         title: "Alarmclock"
         data:
           tag: "alarmclock"
+    - service: media_player.volume_set
+      entity_id: media_player.bedroom_speaker
+      data:
+        volume_level: 1
+    - delay: 0:00:15
     - service: tts.google_say
       entity_id: media_player.bedroom_speaker
       data:
         message: 'You are oversleeping! It is 07:45 am!'
-    - delay: 0:05:00
-    - service: tts.google_say
-      entity_id: media_player.bedroom_speaker
-      data:
-        message: 'You are oversleeping! It is 07:50 am!'
-    - delay: 0:05:00
-    - service: tts.google_say
-      entity_id: media_player.bedroom_speaker
-      data:
-        message: 'You are oversleeping! It is 07:55 am!'
-    - delay: 0:05:00
-    - service: tts.google_say
-      entity_id: media_player.bedroom_speaker
-      data:
-        message: 'You are oversleeping! It is 08:00 am!'
-    - delay: 0:05:00
-    - service: tts.google_say
-      entity_id: media_player.bedroom_speaker
-      data:
-        message: 'You are oversleeping! It is 08:05 am!'
-    - delay: 0:05:00
-    - service: tts.google_say
-      entity_id: media_player.bedroom_speaker
-      data:
-        message: 'You are oversleeping! It is 08:10 am!'
-    - delay: 0:05:00
+    - delay: 0:30:00
     - service: light.turn_on
       entity_id:
         - light.bedroom_nightstand
@@ -76,3 +49,7 @@
         - light.bedroom_2
       data:
         kelvin: 2200
+    - service: media_player.volume_set
+      entity_id: media_player.bedroom_speaker
+      data:
+        volume_level: 0.4
